--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ SQLAlchemy==2.0.21
 psycopg2-binary
 python-dotenv==1.0.0
 python-multipart==0.0.6
+mail-parser==3.15.0
+minio==7.1.16
+boto3==1.28.52
+pytz==2023.3.post1
+sentry-sdk==1.31.0
